feat: adding more gql helpers; fetch dollar per vlaura for both current and previous snapshot

--- a/notebooks/bribes_research/autobriber.ipynb
+++ b/notebooks/bribes_research/autobriber.ipynb
@@ -13,6 +13,50 @@
      "name": "#%% md\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previous dollar per vlAURA: 0.06351649000186448\n",
+      "Current dollar per vlAURA: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "from notebooks.bribes_research.helpers import get_dollar_per_vl_asset_for_snapshot\n",
+    "from notebooks.bribes_research.helpers import get_preset_token_prices\n",
+    "from notebooks.bribes_research.snapshot_helpers import get_active_and_previous_snapshots\n",
+    "\n",
+    "snapshots = get_active_and_previous_snapshots()\n",
+    "previous_dollar_per_vlaura = get_dollar_per_vl_asset_for_snapshot(snapshots.previous_snapshot['id']) if snapshots.previous_snapshot else None\n",
+    "current_dollar_per_vlaura = get_dollar_per_vl_asset_for_snapshot(snapshots.current_snapshot['id']) if snapshots.current_snapshot else None\n",
+    "\n",
+    "assert current_dollar_per_vlaura or previous_dollar_per_vlaura\n",
+    "print(f\"Previous dollar per vlAURA: {previous_dollar_per_vlaura}\")\n",
+    "print(f\"Current dollar per vlAURA: {current_dollar_per_vlaura}\")\n",
+    "token_prices = get_preset_token_prices()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
