chore: rename snapshot helpers to gql helpers

--- a/notebooks/bribes_research/autobriber.ipynb
+++ b/notebooks/bribes_research/autobriber.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -30,7 +30,7 @@
    "source": [
     "from notebooks.bribes_research.helpers import get_dollar_per_vl_asset_for_snapshot\n",
     "from notebooks.bribes_research.helpers import get_preset_token_prices\n",
-    "from notebooks.bribes_research.snapshot_helpers import get_active_and_previous_snapshots\n",
+    "from notebooks.bribes_research.gql_helpers import get_active_and_previous_snapshots\n",
     "\n",
     "snapshots = get_active_and_previous_snapshots()\n",
     "previous_dollar_per_vlaura = get_dollar_per_vl_asset_for_snapshot(snapshots.previous_snapshot['id']) if snapshots.previous_snapshot else None\n",
