chore: more cleanup and description

--- a/notebooks/ebtc_research/mim_ebtc_research.ipynb
+++ b/notebooks/ebtc_research/mim_ebtc_research.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -79,8 +79,22 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Simple simulation projecting revenue from Borrow fee\n",
+    "\n",
+    "This gives an elementary overview of how much revenue we can capture if we own 30% of protocol fees taken from borrowing"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
