chore: more description

--- a/notebooks/ebtc_research/mim_ebtc_research.ipynb
+++ b/notebooks/ebtc_research/mim_ebtc_research.ipynb
@@ -83,7 +83,8 @@
    "source": [
     "## Simple simulation projecting revenue from Borrow fee\n",
     "\n",
-    "This gives an elementary overview of how much revenue we can capture if we own 30% of protocol fees taken from borrowing"
+    "This gives an elementary overview of how much revenue we can capture if we own 30% of protocol fees taken from borrowing\n",
+    "Each line on plot below represents different volume, starting from $1m anually and going up to $15m"
    ],
    "metadata": {
     "collapsed": false,
