chore: more description

--- a/notebooks/ebtc_research/mim_ebtc_research.ipynb
+++ b/notebooks/ebtc_research/mim_ebtc_research.ipynb
@@ -125,7 +125,7 @@
     "    ax.add_line(line)\n",
     "    line.set_label(f\"${float(volume) / 1000000}m\")\n",
     "ax.legend()\n",
-    "ax.set_title('Projected YEARLY revenues on Different volumes with different Leverages')\n",
+    "ax.set_title('Projected YEARLY revenues on different volumes with different Leverages')\n",
     "ax.set_ylabel('Projected Revenue in $')\n",
     "ax.set_xlabel('Leverage')\n",
     "ax.set_xlim(min(MIM_LEVERAGES), max(MIM_LEVERAGES))\n",
