chore: fix markdown

--- a/notebooks/ebtc_research/mim_ebtc_research.ipynb
+++ b/notebooks/ebtc_research/mim_ebtc_research.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
@@ -85,7 +85,7 @@
     "## Simple simulation projecting revenue from Borrow fee\n",
     "\n",
     "This gives an elementary overview of how much revenue we can capture if we own 30% of protocol fees taken from borrowing\n",
-    "Each line on plot below represents different volume, starting from $1m anually and going up to $15m"
+    "Each line on plot below represents different volume, starting from \\$1m anually and going up to 15m"
    ],
    "metadata": {
     "collapsed": false,
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
