feat: WIP on multiply fees calculations

--- a/notebooks/ebtc_research/maker_ebtc_research.ipynb
+++ b/notebooks/ebtc_research/maker_ebtc_research.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "outputs": [
     {
      "data": {
@@ -72,6 +72,7 @@
     "\n",
     "from notebooks.ebtc_research.generate_data import DAI_FEES\n",
     "from notebooks.ebtc_research.generate_data import get_tables_dai_like\n",
+    "from notebooks.ebtc_research.generate_data import get_tables_dai_like_multiply\n",
     "\n",
     "plt.style.use('seaborn')\n",
     "pd.set_option('display.max_rows', 500)\n",
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -140,6 +141,46 @@
     "ax.set_xlim(min(DAI_FEES), max(DAI_FEES))\n",
     "ax.set_ylim(min(revenues), max(revenues))\n",
     "plt.show()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Next, modelling multiply feature, which is basically leverage\n",
+    "You borrow DAI and then increase your ETH exposure with different leverages, like 4.33x or 3.22x\n",
+    "Each leverage has different borrow fee, starting from 3% for 4.33x and going down"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>Volume in $</th>\n      <th>Projected Yearly Revenue in $</th>\n      <th>Borrow Fee</th>\n      <th>Multiply</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>1000000.0000</td>\n      <td>129900.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>1000000.0000</td>\n      <td>48300.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>1000000.0000</td>\n      <td>12100.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>2000000.0000</td>\n      <td>259800.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>2000000.0000</td>\n      <td>96600.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>2000000.0000</td>\n      <td>24200.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>3000000.0000</td>\n      <td>389700.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>3000000.0000</td>\n      <td>144900.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>3000000.0000</td>\n      <td>36300.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>4000000.0000</td>\n      <td>519600.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>4000000.0000</td>\n      <td>193200.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>4000000.0000</td>\n      <td>48400.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>5000000.0000</td>\n      <td>649500.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>5000000.0000</td>\n      <td>241500.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>5000000.0000</td>\n      <td>60500.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>6000000.0000</td>\n      <td>779400.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>6000000.0000</td>\n      <td>289800.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>6000000.0000</td>\n      <td>72600.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>7000000.0000</td>\n      <td>909300.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>7000000.0000</td>\n      <td>338100.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>7000000.0000</td>\n      <td>84700.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>8000000.0000</td>\n      <td>1039200.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>8000000.0000</td>\n      <td>386400.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>8000000.0000</td>\n      <td>96800.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>9000000.0000</td>\n      <td>1169100.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>9000000.0000</td>\n      <td>434700.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>9000000.0000</td>\n      <td>108900.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>10000000.0000</td>\n      <td>1299000.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>10000000.0000</td>\n      <td>483000.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>10000000.0000</td>\n      <td>121000.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>11000000.0000</td>\n      <td>1428900.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>11000000.0000</td>\n      <td>531300.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>11000000.0000</td>\n      <td>133100.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>12000000.0000</td>\n      <td>1558800.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>12000000.0000</td>\n      <td>579600.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>12000000.0000</td>\n      <td>145200.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>13000000.0000</td>\n      <td>1688700.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>13000000.0000</td>\n      <td>627900.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>13000000.0000</td>\n      <td>157300.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>14000000.0000</td>\n      <td>1818600.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>14000000.0000</td>\n      <td>676200.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>14000000.0000</td>\n      <td>169400.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n    <tr>\n      <td>15000000.0000</td>\n      <td>1948500.0</td>\n      <td>0.03</td>\n      <td>4.33</td>\n    </tr>\n    <tr>\n      <td>15000000.0000</td>\n      <td>724500.0</td>\n      <td>0.015</td>\n      <td>3.22</td>\n    </tr>\n    <tr>\n      <td>15000000.0000</td>\n      <td>181500.0</td>\n      <td>0.005</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n  </tbody>\n</table>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "TABLE_HEADERS_MULTIPLY = [\"Volume in $\", \"Projected Yearly Revenue in $\", \"Borrow Fee\", \"Multiply\"]\n",
+    "tables_multiply = get_tables_dai_like_multiply()\n",
+    "df = pd.DataFrame(data=[*tables_multiply], columns=TABLE_HEADERS_MULTIPLY)\n",
+    "display(HTML(df.to_html(index=False)))"
    ],
    "metadata": {
     "collapsed": false,
