chore: add references

--- a/notebooks/ebtc_research/maker_ebtc_research.ipynb
+++ b/notebooks/ebtc_research/maker_ebtc_research.ipynb
@@ -27,7 +27,12 @@
     "\n",
     "Oasis Multiply is a feature that allows you to immediately utilize your borrowed Dai to buy more collateral within Oasis.app. This means that you can increase or decrease your exposure to a single asset without having to perform multiple transactions or go to other apps to perform the exchange.\n",
     "\n",
-    "It sounds like a two-way borrow market\n"
+    "It sounds like a two-way borrow market\n",
+    "\n",
+    "\n",
+    "## References:\n",
+    "- [Stability Fee](https://kb.oasis.app/help/the-stability-fee)\n",
+    "- [Multiply(Leverage)](https://kb.oasis.app/help/what-is-multiply)"
    ],
    "metadata": {
     "collapsed": false,
@@ -50,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "outputs": [
     {
      "data": {
@@ -103,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
@@ -168,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
@@ -194,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "outputs": [
     {
      "data": {
