feat: first attempt to calc volatility

--- a/notebooks/ebtc_research/prices_research.ipynb
+++ b/notebooks/ebtc_research/prices_research.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 123,
    "outputs": [
     {
      "data": {
@@ -27,9 +27,11 @@
    ],
    "source": [
     "from datetime import date\n",
+    "from math import sqrt\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "from IPython.core.display import HTML\n",
     "from IPython.core.display_functions import display\n",
     "\n",
     "plt.style.use('seaborn-darkgrid')\n",
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 124,
    "outputs": [
     {
      "data": {
@@ -101,7 +103,12 @@
     "\n",
     "Where `Pav` is overall mean price\n",
     "`Pi` is daily asset price(assume it's mean daily price)\n",
-    "`n` - number of prices per day\n"
+    "`n` - number of prices per day\n",
+    "\n",
+    "To find out annualized volatility:\n",
+    "> √X * √(∑ (Pav – Pi)2 / n)\n",
+    "\n",
+    "Where X is amount of days in period"
    ],
    "metadata": {
     "collapsed": false,
@@ -124,25 +131,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 125,
    "outputs": [
     {
      "data": {
-      "text/plain": "2017-07-15    0.090847\n2017-07-16    0.081929\n2017-07-17    0.085497\n2017-07-18    0.093066\n2017-07-19    0.098143\n                ...   \n2022-10-17    0.067896\n2022-10-18    0.067866\n2022-10-19    0.067602\n2022-10-20    0.067432\n2022-10-21    0.067583\nName: close, Length: 1925, dtype: float32"
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>Daily Volatility</th>\n      <th>Entire Period Volatility</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0.022472</td>\n      <td>0.985952</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "TABLE_HEADERS = [\"Daily Volatility\", \"Entire Period Volatility\"]\n",
+    "# Calculate overall mean price\n",
+    "mean_price_overall_ethbtc = sum(df_ethbtc['close'].tolist()) / len(df_ethbtc)\n",
+    "# Group by dates\n",
+    "df_daily_prices = df_ethbtc.groupby([df_ethbtc.index.date])['close']\n",
+    "squared_deviations = []\n",
+    "for ix, value in df_daily_prices:\n",
+    "    pav_minus_pi_squared = (mean_price_overall_ethbtc - value.mean()) ** 2\n",
+    "    squared_deviations.append(pav_minus_pi_squared)\n",
+    "# √(∑ (Pav – Pi)^2\n",
+    "variance = sum(squared_deviations) / len(df_daily_prices)\n",
+    "daily_volatility = sqrt(variance)\n",
+    "# √X * √(∑ (Pav – Pi)2 / n)\n",
+    "overall_volatility = daily_volatility * sqrt(len(df_daily_prices))\n",
+    "\n",
+    "dataframe = pd.DataFrame(data=[[daily_volatility, overall_volatility]], columns=TABLE_HEADERS)\n",
+    "display(HTML(dataframe.to_html(index=False)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## ETH-USDC Pair"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "outputs": [
     {
      "data": {
-      "text/plain": "0.04838179967764798"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "1440"
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>Daily Volatility</th>\n      <th>Entire Period Volatility</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>1321.136919</td>\n      <td>49166.887449</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -150,13 +195,19 @@
    ],
    "source": [
     "# Calculate overall mean price\n",
-    "mean_price_overall_ethbtc = sum(df_ethbtc['close'].tolist()) / len(df_ethbtc)\n",
-    "df_daily_prices = df_ethbtc.groupby([df_ethbtc.index.date])['close'].mean()\n",
-    "count_prices_per_day = df_ethbtc.groupby([df_ethbtc.index.date])['close'].count()[0]\n",
-    "\n",
-    "display(df_daily_prices)\n",
-    "display(mean_price_overall_ethbtc)\n",
-    "display(count_prices_per_day)"
+    "mean_price_overall_ethusdc = sum(df_ethusdc['close'].tolist()) / len(df_ethusdc)\n",
+    "df_daily_prices = df_ethusdc.groupby([df_ethusdc.index.date])['close']\n",
+    "count_prices_per_day = df_ethusdc.groupby([df_ethusdc.index.date])['close'].count()[0]\n",
+    "squared_deviations = []\n",
+    "for ix, value in df_daily_prices:\n",
+    "    pav_minus_pi_squared = (mean_price_overall_ethusdc - value.mean()) ** 2\n",
+    "    squared_deviations.append(pav_minus_pi_squared)\n",
+    "variance = sum(squared_deviations) / len(df_daily_prices)\n",
+    "daily_volatility = sqrt(variance)\n",
+    "# √X * √(∑ (Pav – Pi)2 / n)\n",
+    "overall_volatility = daily_volatility * sqrt(len(df_daily_prices))\n",
+    "dataframe = pd.DataFrame(data=[[daily_volatility, overall_volatility]], columns=TABLE_HEADERS)\n",
+    "display(HTML(dataframe.to_html(index=False)))"
    ],
    "metadata": {
     "collapsed": false,
