chore: remove index from df display

--- a/notebooks/aura_bribes/bribes_graviaura_research.ipynb
+++ b/notebooks/aura_bribes/bribes_graviaura_research.ipynb
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "outputs": [
     {
      "data": {
-      "text/plain": "          Voting Round Total graviAURA bought in $ Total BADGER bought in $  \\\n0    27th October 2022                    16959.24                  5913.99   \n1    13th October 2022                    16943.89                  5084.28   \n2  29th September 2022                   22640.234                 7509.109   \n3  15th September 2022                     25066.2                   8618.6   \n4   1st September 2022                    26371.21                  8983.14   \n\n  graviAURA bought BADGER bought $/vlAURA total $/vlAURA pure bribes  \\\n0          5929.80       1661.23          0.036                0.067   \n1          6915.87       1540.69         0.0273               0.0600   \n2         11853.53       2013.17          0.033                0.064   \n3         12227.39       2427.75          0.037                0.064   \n4          8618.04       2133.76           0.04                0.069   \n\n  $/vlAURA Llama vlAURA difference  \n0          0.066            1.504%  \n1          0.059            1.681%  \n2          0.063            1.575%  \n3          0.066            3.077%  \n4        0.08562           21.498%  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Voting Round</th>\n      <th>Total graviAURA bought in $</th>\n      <th>Total BADGER bought in $</th>\n      <th>graviAURA bought</th>\n      <th>BADGER bought</th>\n      <th>$/vlAURA total</th>\n      <th>$/vlAURA pure bribes</th>\n      <th>$/vlAURA Llama</th>\n      <th>vlAURA difference</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>27th October 2022</td>\n      <td>16959.24</td>\n      <td>5913.99</td>\n      <td>5929.80</td>\n      <td>1661.23</td>\n      <td>0.036</td>\n      <td>0.067</td>\n      <td>0.066</td>\n      <td>1.504%</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>13th October 2022</td>\n      <td>16943.89</td>\n      <td>5084.28</td>\n      <td>6915.87</td>\n      <td>1540.69</td>\n      <td>0.0273</td>\n      <td>0.0600</td>\n      <td>0.059</td>\n      <td>1.681%</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>29th September 2022</td>\n      <td>22640.234</td>\n      <td>7509.109</td>\n      <td>11853.53</td>\n      <td>2013.17</td>\n      <td>0.033</td>\n      <td>0.064</td>\n      <td>0.063</td>\n      <td>1.575%</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>15th September 2022</td>\n      <td>25066.2</td>\n      <td>8618.6</td>\n      <td>12227.39</td>\n      <td>2427.75</td>\n      <td>0.037</td>\n      <td>0.064</td>\n      <td>0.066</td>\n      <td>3.077%</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1st September 2022</td>\n      <td>26371.21</td>\n      <td>8983.14</td>\n      <td>8618.04</td>\n      <td>2133.76</td>\n      <td>0.04</td>\n      <td>0.069</td>\n      <td>0.08562</td>\n      <td>21.498%</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>Voting Round</th>\n      <th>Total graviAURA bought in $</th>\n      <th>Total BADGER bought in $</th>\n      <th>graviAURA bought</th>\n      <th>BADGER bought</th>\n      <th>$/vlAURA total</th>\n      <th>$/vlAURA pure bribes</th>\n      <th>$/vlAURA Llama</th>\n      <th>vlAURA difference</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>27th October 2022</td>\n      <td>16959.24</td>\n      <td>5913.99</td>\n      <td>5929.80</td>\n      <td>1661.23</td>\n      <td>0.036</td>\n      <td>0.067</td>\n      <td>0.066</td>\n      <td>1.504%</td>\n    </tr>\n    <tr>\n      <td>13th October 2022</td>\n      <td>16943.89</td>\n      <td>5084.28</td>\n      <td>6915.87</td>\n      <td>1540.69</td>\n      <td>0.0273</td>\n      <td>0.0600</td>\n      <td>0.059</td>\n      <td>1.681%</td>\n    </tr>\n    <tr>\n      <td>29th September 2022</td>\n      <td>22640.234</td>\n      <td>7509.109</td>\n      <td>11853.53</td>\n      <td>2013.17</td>\n      <td>0.033</td>\n      <td>0.064</td>\n      <td>0.063</td>\n      <td>1.575%</td>\n    </tr>\n    <tr>\n      <td>15th September 2022</td>\n      <td>25066.2</td>\n      <td>8618.6</td>\n      <td>12227.39</td>\n      <td>2427.75</td>\n      <td>0.037</td>\n      <td>0.064</td>\n      <td>0.066</td>\n      <td>3.077%</td>\n    </tr>\n    <tr>\n      <td>1st September 2022</td>\n      <td>26371.21</td>\n      <td>8983.14</td>\n      <td>8618.04</td>\n      <td>2133.76</td>\n      <td>0.04</td>\n      <td>0.069</td>\n      <td>0.08562</td>\n      <td>21.498%</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -36,7 +36,9 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from IPython.core.display_functions import display\n",
+    "from IPython.display import HTML\n",
     "from matplotlib.lines import Line2D\n",
+    "\n",
     "from notebooks.aura_bribes.aura_data import VOTING_ROUNDS\n",
     "\n",
     "%matplotlib inline\n",
@@ -59,7 +61,7 @@
     "    ])\n",
     "data_rows.reverse()\n",
     "dataframe = pd.DataFrame(data=data_rows, columns=TABLE_COLUMNS)\n",
-    "display(dataframe)\n"
+    "display(HTML(dataframe.to_html(index=False)))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
